--- a/components/product-card.html
+++ b/components/product-card.html
@@ -24,13 +24,13 @@
     <div class="swiper swiperProductItems h-full relative">
       <div class="swiper-wrapper">
         <div class="swiper-slide flex-jc-c overflow-hidden rounded-[16px]">
-          <img src="img/products/_products.png" alt="product1" class="w-full h-full object-cover">
+          <img src="img/products/products.png" alt="product1" class="w-full h-full object-cover">
         </div>
         <div class="swiper-slide flex-jc-c">
-          <img src="img/products/_products.png" alt="product1" class="w-full h-full object-cover">
+          <img src="img/products/products.png" alt="product1" class="w-full h-full object-cover">
         </div>
         <div class="swiper-slide flex-jc-c">
-          <img src="img/products/_products.png" alt="product1" class="w-full h-full object-cover">
+          <img src="img/products/products.png" alt="product1" class="w-full h-full object-cover">
         </div>
       </div>
       <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
